--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
             "App\\": "app/"
         },
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/Formula/Window.php",
+            "app/Formula/Lvq.php"
+
         ]
     },
     "autoload-dev": {
